--- a/WeatherApi.Cli/WeatherApi.Cli.csproj
+++ b/WeatherApi.Cli/WeatherApi.Cli.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Refit.HttpClientFactory" Version="6.3.2" />
+    <PackageReference Include="ValueOf" Version="2.0.31" />
   </ItemGroup>
 
   <ItemGroup>
