corrections in job and projects regarding (mostly) job and job scheduler

--- a/WeatherApi.Api/appsettings.json
+++ b/WeatherApi.Api/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ExternalWeatherApi": {
+    "BaseAddress": "https://api.worldweatheronline.com"
+  }
 }
